--- a/css/icomoon.css
+++ b/css/icomoon.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src: url('../ft/icomoon/icomoon.eot?6tt51o');
-  src: url('../ft/icomoon/icomoon.eot?6tt51o#iefix') format('embedded-opentype'),
-    url('../ft/icomoon/icomoon.ttf?6tt51o') format('truetype'),
-    url('../ft/icomoon/icomoon.woff?6tt51o') format('woff'),
-    url('../ft/icomoon/icomoon.svg?6tt51o#icomoon') format('svg');
+  src: url('../fonts/icomoon/icomoon.eot?6tt51o');
+  src: url('../fonts/icomoon/icomoon.eot?6tt51o#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon/icomoon.ttf?6tt51o') format('truetype'),
+    url('../fonts/icomoon/icomoon.woff?6tt51o') format('woff'),
+    url('../fonts/icomoon/icomoon.svg?6tt51o#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
